Session3/Tests/bin/Debug/netcoreapp3.1/Logs/Tests.WebServiceTestNUnit.GetAllProductsAsObject - 2022-07-12-08-34-36-8607.txt

2022-07-12 08:34:36.879
INFORMATION:	Setup test object for Tests.WebServiceTestNUnit.GetAllProductsAsObject

2022-07-12 08:34:36.896
INFORMATION:	Getting event firing web service driver

2022-07-12 08:34:36.918
ACTION:	Sending GET request to https://magenicautomation.azurewebsites.net/ at endpoint /api/XML_JSON/GetAllProducts
Content:
  **Content is null**

2022-07-12 08:34:38.196
INFORMATION:	Received GET response from https://magenicautomation.azurewebsites.net/api/XML_JSON/GetAllProducts
Returned OK(200)
Content:
[{"Id":1,"Name":"Tomato Soup","Category":"Groceries","Price":1.0},{"Id":2,"Name":"Yo-yo","Category":"Toys","Price":3.75},{"Id":3,"Name":"Hammer","Category":"Hardware","Price":16.99}]


2022-07-12 08:34:38.369
ERROR:	
  Incorrect Matched
  Expected string length 6 but was 5. Strings differ at index 0.
  Expected: "Hammer"
  But was:  "Yo-yo"
  -----------^

   at NUnit.Framework.Assert.ReportFailure(String message)
   at NUnit.Framework.Assert.ReportFailure(ConstraintResult result, String message, Object[] args)
   at NUnit.Framework.Assert.That[TActual](TActual actual, IResolveConstraint expression, String message, Object[] args)
   at NUnit.Framework.Assert.AreEqual(Object expected, Object actual, String message, Object[] args)
   at Tests.WebServiceTestNUnit.GetAllProductsAsObject() in c:\MAQS Repository\Session3\Tests\WebServiceTestNUnit.cs:line 39

2022-07-12 08:34:38.374
ERROR:	Test failed
